@@ -1,3 +1,7 @@
+2008-06-19 1.81 Tom Insam  <tom@jerakeen.org>
+  * fix changes for the Register title
+  * clearer licensing
+
 2008-06-19 1.80 Tom Insam  <tom@jerakeen.org>
   * Twitter support
   * Google calculator support
